beberapa perbaikan
